--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,6 +43,7 @@ img {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 50px;
   padding-left: 15px;
   padding-right: 15px;
   padding-bottom: 200px;
@@ -52,7 +53,7 @@ img {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 135px;
+  padding-top: 120px;
   padding-left: 15px;
   padding-right: 15px;
 }
